SET(CMAKE_INCLUDE_CURRENT_DIR ON)

INCLUDE_DIRECTORIES(".")

remove_definitions(-DDLL_EXPORT)

FILE(COPY ${COPY_FILES} DESTINATION ${CMAKE_CURRENT_BINARY_DIR}/ FILE_PERMISSIONS OWNER_WRITE OWNER_READ OWNER_EXECUTE) 

ADD_SUBDIRECTORY(testdata)
ADD_SUBDIRECTORY(baselines)

# Usage: AT_XXX_TEST(testfilename das|dds|datadds)
MACRO(AT_XXX_TEST test what local)
if("${local}" STREQUAL "1")
  SET(TESTNAME "${test}-${what}-local")
else()
  SET(TESTNAME "${test}-${what}-remote")
endif()
add_test(NAME ${TESTNAME}
    COMMAND ${CMAKE_COMMAND} --trace
    -DTEST=${test}
    -DWHAT=${what}
    -DLOCAL=${local}    
    -P ${CMAKE_SOURCE_DIR}/tests/runtest.cmake)
ENDMACRO()

MACRO(AT_DDS_TEST test)
  AT_XXX_TEST(${test} dds 1)
ENDMACRO()
MACRO(AT_DODS_TEST test)
  AT_XXX_TEST(${test} datadds 1)
ENDMACRO()
MACRO(AT_DDS_URL_TEST test)
  AT_XXX_TEST(${test} dds 0)
ENDMACRO()
MACRO(AT_DODS_URL_TEST test)
  AT_XXX_TEST(${test} datadds 0)
ENDMACRO()

# These are local
at_dds_test(b31)
at_dds_test(b31a)
at_dds_test(Drifters)
at_dds_test(EOSDB)
at_dds_test(ingrid)
at_dds_test(nestedDAS)
at_dds_test(NestedSeq)
at_dds_test(NestedSeq2)
at_dds_test(OverideExample)
at_dds_test(pbug0001b)
at_dds_test(SimpleDrdsExample)
at_dds_test(test.PointFile)
at_dds_test(test.SwathFile)
at_dds_test(whoi)
at_dds_test(test.01)
at_dds_test(test.02)
at_dds_test(test.03)
at_dds_test(test.04)
at_dds_test(test.05)
#ignore: at_dds_test(test.06)
at_dds_test(test.06a)
at_dds_test(test.07)
at_dds_test(test.07a)
at_dds_test(test.21)
at_dds_test(test.22)
at_dds_test(test.23)
at_dds_test(test.31)
at_dds_test(test.32)
at_dds_test(test.50)
at_dds_test(test.53)
at_dds_test(test.55)
at_dds_test(test.56)
at_dds_test(test.57)
at_dds_test(test.66)
at_dds_test(test.67)
at_dds_test(test.68)
at_dds_test(test.69)
at_dds_test(test.an1)
at_dds_test(test.dfp1)
at_dds_test(test.dfr1)
at_dds_test(test.dfr2)
at_dds_test(test.dfr3)
at_dds_test(test.gr1)
at_dds_test(test.gr2)
at_dds_test(test.gr3)
at_dds_test(test.gr4)
at_dds_test(test.gr5)
at_dds_test(test.sds1)
at_dds_test(test.sds2)
at_dds_test(test.sds3)
at_dds_test(test.sds4)
at_dds_test(test.sds5)
at_dds_test(test.sds6)
at_dds_test(test.sds7)
at_dds_test(test.vs1)
at_dds_test(test.vs2)
at_dds_test(test.vs3)
at_dds_test(test.vs4)
at_dds_test(test.vs5)

# These are remote
at_dds_url_test(test.01)
at_dds_url_test(test.02)
at_dds_url_test(test.03)
at_dds_url_test(test.04)
at_dds_url_test(test.05)
#ignore: at_dds_url_test(test.06)
at_dds_url_test(test.06a)
at_dds_url_test(test.07a)
at_dds_url_test(test.07)
at_dds_url_test(test.21)
at_dds_url_test(test.22)
at_dds_url_test(test.23)
at_dds_url_test(test.31)
at_dds_url_test(test.32)
at_dds_url_test(test.50)
at_dds_url_test(test.53)
at_dds_url_test(test.55)
at_dds_url_test(test.56)
at_dds_url_test(test.57)
at_dds_url_test(test.66)
at_dds_url_test(test.67)
at_dds_url_test(test.68)
at_dds_url_test(test.69)

#DODS
at_dods_url_test(test.01)
at_dods_url_test(test.02)
at_dods_url_test(test.03)
at_dods_url_test(test.04)
at_dods_url_test(test.05)
#ignore: at_dods_url_test(test.06)
at_dods_url_test(test.06a)
at_dods_url_test(test.07a)
at_dods_url_test(test.07)
at_dods_url_test(test.21)
at_dods_url_test(test.22)
at_dods_url_test(test.23)
at_dods_url_test(test.31)
at_dods_url_test(test.32)
at_dods_url_test(test.50)
at_dods_url_test(test.53)
at_dods_url_test(test.55)
at_dods_url_test(test.56)
at_dods_url_test(test.57)
at_dods_url_test(test.66)
at_dods_url_test(test.67)
at_dods_url_test(test.68)
at_dods_url_test(test.69)

# Add .c tests
ADD_EXECUTABLE(testurl testurl.c)
TARGET_LINK_LIBRARIES(testurl oc)
ADD_TEST(testurl ${EXECUTABLE_OUTPUT_PATH}/testurl)

